syntax = "proto3";
package proto;
option go_package = ".;proto";

service Hover {
    // read the text under the cursor
    rpc HoverRead (HoverReadRequest) returns (HoverReadResponse);

    // stream the text under the cursor as it changes
    rpc HoverReadStream (HoverReadStreamRequest) returns (stream HoverReadStreamResponse);
}

message HoverReadRequest {
    uint32 xFromCenter = 1;
    uint32 yFromCenter = 2;
}

message HoverReadStreamRequest {
    uint32 xFromCenter = 1;
    uint32 yFromCenter = 2;
}

message HoverReadResponse {
    string text = 1;
}

message HoverReadStreamResponse {
    string text = 1;
    string error = 15;
}
